// Vitest Snapshot v1

exports[`CdrInput > renders correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        spellcheck="false"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    
  </div>
</div>
`;

exports[`CdrInput > renders error state correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        aria-describedby="renders-error"
        aria-errormessage="renders-error"
        aria-invalid="true"
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--error cdr-input--primary cdr-input--medium"
        id="renders"
        spellcheck="false"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    <div
      class="cdr-form-error"
      id="renders-error"
      role="status"
    >
      <span
        class="cdr-form-error__icon"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-icon--small cdr-icon--inherit-color"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <g>
            <path
              d="M15.293 16.707a1 1 0 001.414-1.414L9.121 7.707a1 1 0 10-1.414 1.414l7.586 7.586z"
              role="presentation"
            />
            <path
              clip-rule="evenodd"
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-2 0a8 8 0 11-16 0 8 8 0 0116 0z"
              fill-rule="evenodd"
            />
          </g>
          
          <!--v-if-->
        </svg>
      </span>
      
      <span>
        Something is wrong!
      </span>
      
    </div>
    
  </div>
</div>
`;

exports[`CdrInput > renders number input correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        inputmode="numeric"
        novalidate=""
        pattern="[0-9]*"
        spellcheck="false"
        type="number"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    
  </div>
</div>
`;

exports[`CdrInput renders correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        spellcheck="false"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    
  </div>
</div>
`;

exports[`CdrInput renders error state correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        aria-errormessage="renders-error"
        aria-invalid="true"
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--error cdr-input--primary cdr-input--medium"
        id="renders"
        spellcheck="false"
        type="text"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    <div
      class="cdr-form-error"
      id="renders-error"
      role="status"
    >
      <span
        class="cdr-form-error__icon"
      >
        <svg
          aria-hidden="true"
          class="cdr-icon cdr-icon--small cdr-icon--inherit-color"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          
          
          
          <g>
            <path
              d="M15.293 16.707a1 1 0 001.414-1.414L9.121 7.707a1 1 0 10-1.414 1.414l7.586 7.586z"
              role="presentation"
            />
            <path
              clip-rule="evenodd"
              d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-2 0a8 8 0 11-16 0 8 8 0 0116 0z"
              fill-rule="evenodd"
            />
          </g>
          
          <!--v-if-->
        </svg>
      </span>
      
      <span>
        Something is wrong!
      </span>
      
    </div>
    
  </div>
</div>
`;

exports[`CdrInput renders number input correctly 1`] = `
<div
  class="cdr-label-standalone"
>
  <div
    class="cdr-label-standalone__label-wrapper"
  >
    <label
      class="cdr-label-standalone__label"
      for="renders"
    >
      Label Test 
      <!--v-if-->
    </label>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="cdr-label-standalone__input-wrap cdr-label-standalone__input-spacing"
  >
    
    <div
      class="cdr-input-wrap"
    >
      <input
        autocapitalize="off"
        autocorrect="off"
        class="cdr-input cdr-input--primary cdr-input--medium"
        id="renders"
        inputmode="numeric"
        novalidate=""
        pattern="[0-9]*"
        spellcheck="false"
        type="number"
      />
      <!--v-if-->
      <!--v-if-->
    </div>
    
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="cdr-label-standalone__post-content"
  >
    
    
    
    
  </div>
</div>
`;
